--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.91.0",
     "@upstash/redis": "^1.35.6",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "pg": "^8.16.3",
     "react": "19.2.0",
